--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,23 @@
 h1 {
   font-family: monospace;
   text-align: center;
+  margin-bottom: 20px;
+  animation: text-color 3s;
+  animation-iteration-count: infinite;
 }
 
 .container {
   width: 500px;
+  height: 520px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  flex-direction: column;
+  font-family: fantasy;
+  font-size: xxx-large;
+  color: white;
+  text-align: center;
 }
 
 .box {
@@ -17,8 +26,13 @@ h1 {
   background-color: teal;
   margin: 1px;
   border-radius: 10px;
-  transition: 0.5s;
-  border: 10px solid teal;
+  transition: all 0.5s;
+  border: 5px solid teal;
+  box-shadow: 1px 1px 15px black;
+  margin-bottom: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box:hover {
@@ -26,8 +40,22 @@ h1 {
 }
 
 .body {
-  display: flex;
+  /* display: flex;
   direction: horizontal;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  background-image: linear-gradient(turquoise, white);
+  padding-bottom: 25%;
+}
+
+@keyframes text-color {
+  0% {
+    color: white;
+  }
+  50% {
+    color: grey;
+  }
+  100% {
+    color: black;
+  }
 }
